Working example, can be run python -m game_server
